fixed default text alignment on document-node

--- a/src/react-web/components/graph-editor/react-flow-overrides.css
+++ b/src/react-web/components/graph-editor/react-flow-overrides.css
@@ -4,4 +4,5 @@
   border-color: transparent !important;
   background-color: transparent;
   box-shadow: none !important;
+  text-align: left;
 }
